--- a/AllianceRoleplay.github.io/index.html
+++ b/AllianceRoleplay.github.io/index.html
@@ -99,7 +99,7 @@
                                 </div>
                                 <div class="content">
                                     <header class="align-center">
-                                        <p>Server Manger</p>
+                                        <p>Server Manager</p>
                                         <h2>D0xc</h2>
                                     <header class="align-center">
                                     <p class="align-center">I Heard The Blackbird Sing.</p>
@@ -143,7 +143,7 @@
                                 </div>
                                 <div class="content">
                                     <header class="align-center">
-                                        <p>Head Adminstrator</p>
+                                        <p>Adminstrator</p>
                                         <h2>Roach</h2>
                                     <header class="align-center">
                                     <p class="align-center">The military donny</p>
